Title and other basic info

--- a/Implementácia kontroly IPC do systému Medusa.tex
+++ b/Implementácia kontroly IPC do systému Medusa.tex
@@ -1,13 +1,13 @@
 \documentclass[dp]{FEIstyle}
 
-\FEIauthor{Ján Srnec}
-\FEItitle{Ukážkový \LaTeX\ dokument s dlhým názvom}
-\FEItitleEn{Example \LaTeX\ document with long title}
-\FEIkeywords{kľúčové slovo1, kľúčové slovo2, kľúčové slovo3}
-\FEIkeywordsEn{keyword1, keyword2, keyword3}
-\FEIregNr{FEI-xxxx-xxxx}
-\FEIsupervisor{Mgr. Ing. Peter Párker, PhD.}
-\FEIconsultant{Ing. John Doe}
+\FEIauthor{Viliam Mihálik}
+\FEItitle{Implementácia kontroly IPC do systému Medusa}
+\FEItitleEn{Implement IPC control on Medusa system}
+\FEIkeywords{Medusa, IPC, Linux, LSM}
+\FEIkeywordsEn{Medusa, IPC, Linux, LSM}
+\FEIregNr{FEI-5384-72886}
+\FEIsupervisor{Mgr. Ing. Matúš Jókay, PhD.}
+\FEIconsultant{}
 
 \FEIglossaries{includes/glossary}
 \bibliography{includes/bibliography.bib}
