--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -2,3 +2,4 @@
 \newacronym{hw}{HW}{Halo Wars}
 \newacronym{cdma}{CDMA}{Code Division Multiple Access} 
 \newacronym{gsm}{GSM}{Global System for Mobile communication}
+\newacronym{ipc}{IPC}{Inter-Process Communication}
