--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -38,8 +38,7 @@
   booksubtitle = {reconfiguring academic information resources for the 21st  century}, 
   location = {Washington (D.C.)}, 
   publisher = {Council on Library and Information Resources; Association of American Universities}, 
-  pages = {105-116},
-  langid = {english}
+  pages = {105-116}
 }
 
 @ARTICLE{t03,
@@ -52,8 +51,7 @@
   number = {7/8},
   urldate ={2005-08-15},
   url = {http://www.dlib.org/dlib/july05/lynch/07lynch.html}, 
-  issn = {1082-9873},
-  langid = {english}
+  issn = {1082-9873}
 }
 
 @ARTICLE{cr,
@@ -63,8 +61,7 @@
   year = {1991},
   volume = {12},
   number = {3},
-  issn={2232-332X},
-  langid={english}
+  issn={2232-332X}
 }
 
 @BOOK{kniha,
@@ -98,8 +95,7 @@
   edition = {3},
   publisher={MIT Press},
   address = {Praha},
-  pagetotal={332},
-  langid={english}
+  pagetotal={332}
 }
 
 @ARTICLE{small,
@@ -158,7 +154,6 @@
   journaltitle = {TUGBoat},
   publisher = {TUG},
   issn = {1222-3333},
-  langid = {english},
   date = {1980/},
   options = {skipbib=true},
   url={http://tugboat.tug.org/}
