--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -3,3 +3,6 @@
 \newacronym{cdma}{CDMA}{Code Division Multiple Access} 
 \newacronym{gsm}{GSM}{Global System for Mobile communication}
 \newacronym{ipc}{IPC}{Inter-Process Communication}
+\newacronym{fifo}{FIFO}{First in, First out}
+\newacronym{posix}{POSIX}{Portable Operating System Interface}
+\newacronym{rcu}{RCU}{read-copy-update }
