--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -5,4 +5,5 @@
 \newacronym{ipc}{IPC}{Inter-Process Communication}
 \newacronym{fifo}{FIFO}{First in, First out}
 \newacronym{posix}{POSIX}{Portable Operating System Interface}
-\newacronym{rcu}{RCU}{read-copy-update }
+\newacronym{rcu}{RCU}{read-copy-update}
+\newacronym{pid}{PID}{process identifier}
